Solucion a los errores: No se actualiza al editar el jugador.
Arreglar el cancelar de Crear categoría

No se puede añadir jugadores a los equipos,